    Optimizations were made for many anti-exploit behaviours
    Acrobatic's Dodge will no longer reward XP for a few seconds after a TP
    Roll will not give XP for a few seconds after a TP
    Added missing X_STRIPPED_WOOD blocks to Woodcutting's experience tables
    Added missing X_WALL_FAN and X_DEAD_WALL_FAN blocks to Herbalism's experience tables
    You can now disable the party system completely
    Many config files are now generated on demand instead of being copied from within the JAR
    All config nodes that used to be styled with CamelCase or otherwise now use hyphens (-) as spaces for readability and consistency
    All config nodes will now use Capital letters at the start of each nodes name and after each hyphen (-)
    All config nodes now include a comment with the default value of the node to use as reference
    Expanded settings relating to purging users who have not leveled or users who had not logged in for many months
    Acrobatic's Dodge XP increased from 120 -> 480
    Fishing's always catch fish setting now defaults to true instead of false
    Optimized code related to Fishing
    NOTE: Not every config key that was renamed will be listed here
    Admins will now be notified if a player trips over-fishing exploit detection 3+ times in a row (Locale: "Fishing.OverFishingDetected")
        Note: Admins are players who are op or have adminchat permission.

    Bug Fixes
    Fixed a bug where Blast Minings cooldown was not being displayed correctly
    Fixed a bug where players who started at level 1 would not be purged from the DB for being "powerless"
    Fixed a potential bug where players could be awarded XP for cancelled tame events
    Fixed a bug where party size limits were only counting online players

    Permission Node Changes
    Removed "mcmmo.motd" because it makes no sense to have this as a player permission when its a config option
    Removed "mcmmo.showversion" because this one also makes no sense

    Config Changes
